policies/deploy-valid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-supply-chain-demo
  labels:
    app: secure-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secure-demo
  template:
    metadata:
      labels:
        app: secure-demo
    spec:
      containers:
      - name: web-dashboard
        image: demobyta.azurecr.io/cloud-supply-chain-demo:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: web-dashboard-content
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-supply-chain-demo
spec:
  type: ClusterIP
  selector:
    app: secure-demo
  ports:
  - port: 80
    targetPort: 80
