policies/verify-cosign-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-cosign-signature
  annotations:
    policies.kyverno.io/title: Verify Cosign Image Signature
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Chặn mọi Pod triển khai nếu container image từ ACR không có chữ ký hợp lệ
      từ Public Key được cấp phép.
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: verify-signature
      match:
        any:
        - resources:
            kinds:
              - Pod
            namespaces:
              - default
              - production
      verifyImages:
        - imageReferences:
            - "*"
          mutateDigest: false
          attestors:
            - entries:
                - keys:
                    publicKeys: |-
                        -----BEGIN PUBLIC KEY-----
                        MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEX2NrUE6KMSDSPuwb9K2Peq0u/NEe
[...]
                        -----END PUBLIC KEY-----
